# MATOS

./: .gitignore  CMakeLists.txt  OSC_Tester.pd  README.md  doxygen  neighbors.txt  neighbors1.txt  neighbors2.txt  neighbors3.txt  neighbors4.txt  neighbors5.txt  neighbors6.txt  start.sh
demo/: MATO.touchosc  neighbors.txt
demo/1/pd/: main.pd
demo/1/pd/states/: state1.txt  state2.txt
demo/2/pd/: main.pd
demo/2/pd/states/: state0.txt  state1.txt  state2.txt  state3.txt
demo/3/pd/: main.pd
demo/3/pd/states/: state1.txt  state2.txt  state3.txt
demo/4/pd/: main.pd
demo/4/pd/states/: state1.txt  state2.txt  state3.txt
durations/: 10.txt  11.txt  12.txt  14.txt  15.txt  17.txt  2.txt  20.txt  22.txt  3.txt  7.txt  9.txt
in_c/: main copy.pd  main.pd  main_0.pd  main_1.pd  main_2.pd  main_3.pd  main_4.pd  main_5.pd  main_6.pd  main_7.pd  main_test.pd
in_c/durations/: 1.txt  13.txt  16.txt  18.txt  19.txt  20.txt  21.txt  23.txt  24.txt  8.txt
in_c/notes/: 1.txt  11.txt  12.txt  15.txt  17.txt  2.txt  21.txt  22.txt  23.txt  3.txt  4.txt  5.txt  7.txt
in_c/patch_editor_abs/: maestro4.pd
in_c/patch_editor_abs/statesave/: 1-clock-ss.txt  2-basic-lfo-ss.txt  2-maestro4-ss.txt  2-wtable-ss.txt
include/: Action.h  Agent.h  AgentMonitor.h  AudioIn.h  AudioMonitor.h  Behavior.h  Belief.h  Beliefs.h  Goal.h  Goals.h  Interpreter.h  Monitor.h  OptionGenerator.h  OscListener.h  OscMonitor.h  OscSender.h  PdObject.h  PdPatch.h  PdStateBehavior.h  ProximityMonitor.h  SensorMonitor.h  TempoBehavior.h  Timeline.h  common.h  cxxopts.hpp
notes/: 10.txt  13.txt  14.txt  16.txt  18.txt  19.txt  24.txt  6.txt  7.txt  8.txt  9.txt
pd/: main.pd
pd/patch_editor_abs/: grain.pd  maestro4.pd
pd/patch_editor_abs/statesave/: 0-ladder-filter-ss.txt  1-2op-fm-ss.txt  1-combfilter-ss.txt  1-decay-ss.txt  1-granular-delay-ss.txt  1-kick-ss.txt  1-ladder-filter-ss.txt  1-lowpass2-ss.txt  1-phasor-ss.txt  1-polarizer-ss.txt  1-slope-ss.txt  1-snare-ss.txt  1-triad-ss.txt  1-trigons-ss.txt  2-bwl-osc-ss.txt  2-granular-delay-ss.txt  2-maestro4-ss.txt  2-mega-seq-3-ss.txt  2-trigons-ss.txt  3-basic-lfo-ss.txt  3-granular-delay-ss.txt  3-trigons-ss.txt  4-basic-lfo-ss.txt  4-granular-delay-ss.txt  5-granular-delay-ss.txt
pd/states/: state0.txt  state1.txt  state4.txt
src/: Agent.cpp  main.cpp
src/AgentComm/: AgentMonitor.cpp  OscListener.cpp  OscMonitor.cpp
src/Audio/: PdObject.cpp  PdPatch.cpp  Timeline.cpp
src/BDI/: Action.cpp  ActionGenerator.cpp  Belief.cpp  Beliefs.cpp  Goal.cpp  Goals.cpp  Interpreter.cpp  OptionGenerator.cpp
src/Behaviors/: Behavior.cpp  PdStateBehavior.cpp  TempoBehavior.cpp
src/IO/: AudioIn.cpp  AudioMonitor.cpp  PdPatch.cpp
src/Input/: ProximityMonitor.cpp
src/Monitor/: OscListener.cpp  OscMonitor.cpp
src/Output/: PdObject.cpp  PdPatch.cpp
src/PdAudio/: PdPatch.cpp
states/: state0.txt  state2.txt  state3.txt  state4.txt  state5.txt  state6.txt  state7.txt  state8.txt
tests/: CMakeLists.txt  timeline_tests.cpp
